# self-driving-car

./: .gitignore  README.md
Pedestrian_detection_module/: pedestrian_detection.py
capstone_traffic_light_classifier/: README.md  main.py  test.py  traffic_light_classifier.py  traffic_light_dataset.py  train.py
project_10_MPC_control/: CMakeLists.txt  DATA.md  README.md  install-ubuntu.sh  install_ipopt.sh  lake_track_waypoints.csv
project_10_MPC_control/src/: MPC.cpp  MPC.h  main.cpp
project_10_MPC_control/src/Eigen-3.3/: .hg_archival.txt
project_10_MPC_control/src/Eigen-3.3/test/: main.h
project_11_path_planning/: CMakeLists.txt  README.md  cmakepatch.txt  install-mac.sh  install-ubuntu.sh  model_documentation.md
project_11_path_planning/data/: highway_map.csv
project_11_path_planning/src/: coords_transform.h  main.cpp  spline.h  utils.h  waypoints.h
project_11_path_planning/src/Eigen-3.3/: .hgtags
project_11_path_planning/src/Eigen-3.3/doc/: AsciiQuickReference.txt
project_11_path_planning/src/Eigen-3.3/test/: CMakeLists.txt  product_mmtr.cpp  sparse_product.cpp
project_12_road_segmentation/: README.md  helper.py  image_augmentation.py  main.py  main_27.py  project_tests.py
project_1_lane_finding_basic/: Line.py  README.md  lane_detection.py  main.py
project_2_traffic_sign_classifier/: README.md  Traffic_Sign_Classifier.ipynb
project_3_behavioral_cloning/: README.md  config.py  drive.py  load_data.py  model.py  visualize_activations.py  visualize_data.py
project_3_behavioral_cloning/checkpoints/old_bias_05/: model.json
project_3_behavioral_cloning/checkpoints/old_bias_07/: history.csv
project_3_behavioral_cloning/data/: driving_log.csv
project_3_behavioral_cloning/logs/: history.csv  model.json
project_3_behavioral_cloning/pretrained/: model.hdf5
project_4_advanced_lane_finding/: README.md  binarization_utils.py  calibration_data.pickle  calibration_utils.py  globals.py  line_utils.py  main.py  perspective_utils.py  writeup_template.md
project_4_advanced_lane_finding/examples/: example.ipynb  example.py
project_4_advanced_lane_finding/output_images/: save_output_here.txt
project_5_vehicle_detection/: README.md  SSD.py  config.py  functions.py  functions_detection.py  functions_feat_extraction.py  functions_utils.py  main.py  main_hog.py  main_ssd.py  process_video.py  project_5_utils.py  train.py  vehicle.py  writeup_template.md
project_5_vehicle_detection/data/: feat_extraction_params.pickle  feature_scaler.pickle  svm_trained.pickle
project_6_extended_kalman_filter/: .gitignore  CMakeLists.txt  README.md
project_6_extended_kalman_filter/Docs/: Data_Flow_Doc.txt  Input_Output File Format.txt
project_6_extended_kalman_filter/ide_profiles/: README.md
project_6_extended_kalman_filter/src/: FusionEKF.cpp  FusionEKF.h  ground_truth_package.h  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  tools.cpp  tools.h
project_7_unscented_kalman_filter/: .gitignore  CMakeLists.txt  README.md  readme.txt
project_7_unscented_kalman_filter/src/: main.cpp  measurement_package.h  tools.cpp  tools.h  ukf.cpp  ukf.h
project_8_kidnapped_vehicle/: CMakeLists.txt  README.md  build.sh  clean.sh  install-mac.sh  install-ubuntu.sh  run.sh
project_8_kidnapped_vehicle/src/: helper_functions.h  main.cpp  map.h  particle_filter.cpp  particle_filter.h
project_9_PID_control/: CMakeLists.txt  README.md  install-ubuntu.sh
project_9_PID_control/src/: PID.cpp  PID.h  main.cpp
(+2 files in other folders)
